--- a/ol_payment_fraud_detection.ipynb
+++ b/ol_payment_fraud_detection.ipynb
@@ -1708,16 +1708,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:OSError while attempting to symlink the latest log directory\n"
-     ]
-    },
     {
      "ename": "ModuleNotFoundError",
      "evalue": "No module named 'airflow.providers.google.cloud.operators.local_to_gcs'",
@@ -1725,13 +1718,36 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mairflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mproviders\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcloud\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moperators\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlocal_to_gcs\u001b[39;00m \u001b[39mimport\u001b[39;00m LocalFilesystemToGCSOperator\n",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mairflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mproviders\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcloud\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moperators\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlocal_to_gcs\u001b[39;00m \u001b[39mimport\u001b[39;00m LocalFilesystemToGCSOperator\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'airflow.providers.google.cloud.operators.local_to_gcs'"
      ]
     }
    ],
    "source": [
     "from airflow.providers.google.cloud.operators.local_to_gcs import LocalFilesystemToGCSOperator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'storage' from 'gcloud' (C:\\Users\\milth\\AppData\\Roaming\\Python\\Python310\\site-packages\\gcloud\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgcloud\u001b[39;00m \u001b[39mimport\u001b[39;00m storage\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39moauth2client\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mservice_account\u001b[39;00m \u001b[39mimport\u001b[39;00m ServiceAccountCredentials\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'storage' from 'gcloud' (C:\\Users\\milth\\AppData\\Roaming\\Python\\Python310\\site-packages\\gcloud\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from gcloud import storage\n",
+    "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "import os"
    ]
   }
  ],
