Checking some libraries

--- a/ol_payment_fraud_detection.ipynb
+++ b/ol_payment_fraud_detection.ipynb
@@ -1749,6 +1749,30 @@
     "from oauth2client.service_account import ServiceAccountCredentials\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SYSTEM_WGETRC = c:/progra~1/wget/etc/wgetrc\n",
+      "syswgetrc = C:\\Program Files (x86)\\GnuWin32/etc/wgetrc\n",
+      "Cannot open cookies file `cookies.txt': No such file or directory\n",
+      "--2023-03-28 14:13:37--  https://www.kaggle.com/kmader/rsna-bone-age/downloads/rsna-bone-age.zip\n",
+      "Resolving www.kaggle.com... 35.244.233.98\n",
+      "Connecting to www.kaggle.com|35.244.233.98|:443... connected.\n",
+      "OpenSSL: error:1407742E:SSL routines:SSL23_GET_SERVER_HELLO:tlsv1 alert protocol version\n",
+      "Unable to establish SSL connection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=FILEID' -O FILENAME"
+   ]
   }
  ],
  "metadata": {
