Change df_save type file to csv from parquet

--- a/ol_payment_fraud_detection.ipynb
+++ b/ol_payment_fraud_detection.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Dataset/PS_20174392719_1491204439457_log.csv\")"
+    "df = pd.read_csv(\"D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\PS_20174392719_1491204439457_log.csv\")"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[6362620 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,8 @@
     "min_value = df['step'].min()\n",
     "for counter in range(min_value, max_value+1):\n",
     "    df_save = df[df['step'] == counter]\n",
-    "    df_save.to_parquet(f'Dataset/cleaned_dataset/online_payment_{counter}.parquet')"
+    "    # df_save.to_parquet(f'Dataset/cleaned_dataset/online_payment_{counter}.parquet')\n",
+    "    df_save.to_csv((f'D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\cleaned_dataset_csv\\online_payment_{counter}.csv'))"
    ]
   },
   {
