--- a/ol_payment_fraud_detection.ipynb
+++ b/ol_payment_fraud_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[6362620 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,8 +825,8 @@
     "min_value = df['step'].min()\n",
     "for counter in range(min_value, max_value+1):\n",
     "    df_save = df[df['step'] == counter]\n",
-    "    # df_save.to_parquet(f'Dataset/cleaned_dataset/online_payment_{counter}.parquet')\n",
-    "    df_save.to_csv((f'D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\cleaned_dataset_csv\\online_payment_{counter}.csv'))"
+    "    df_save.to_parquet(f'D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\cleaned_dataset\\online_payment_{counter}.parquet', index=True)\n",
+    "    # df_save.to_csv((f'D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\cleaned_dataset_csv\\online_payment_{counter}.csv'))"
    ]
   },
   {
