--- a/ol_payment_fraud_detection.ipynb
+++ b/ol_payment_fraud_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\PS_20174392719_1491204439457_log.csv\")"
+    "df = pd.read_parquet(r\"D:\\DATA\\Data Fellowship IYKRA\\CODE\\Final Project\\Dataset\\cleaned_dataset\\online_payment_1.parquet\")"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "      <td>170136.00</td>\n",
        "      <td>160296.36</td>\n",
        "      <td>M1979787155</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -99,7 +99,7 @@
        "      <td>21249.00</td>\n",
        "      <td>19384.72</td>\n",
        "      <td>M2044282225</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -113,7 +113,7 @@
        "      <td>181.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>C553264065</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -127,7 +127,7 @@
        "      <td>181.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>C38997010</td>\n",
-       "      <td>21182.00</td>\n",
+       "      <td>21182.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -141,7 +141,7 @@
        "      <td>41554.00</td>\n",
        "      <td>29885.86</td>\n",
        "      <td>M1230701703</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -161,124 +161,111 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362615</th>\n",
-       "      <td>743</td>\n",
-       "      <td>CASH_OUT</td>\n",
-       "      <td>339682.13</td>\n",
-       "      <td>C786484425</td>\n",
-       "      <td>339682.13</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>C776919290</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>339682.13</td>\n",
+       "      <th>2703</th>\n",
        "      <td>1</td>\n",
+       "      <td>CASH_IN</td>\n",
+       "      <td>43478.09</td>\n",
+       "      <td>C1156135967</td>\n",
+       "      <td>7471989.62</td>\n",
+       "      <td>7515467.71</td>\n",
+       "      <td>C2117043942</td>\n",
+       "      <td>124103.0</td>\n",
+       "      <td>173135.98</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362616</th>\n",
-       "      <td>743</td>\n",
-       "      <td>TRANSFER</td>\n",
-       "      <td>6311409.28</td>\n",
-       "      <td>C1529008245</td>\n",
-       "      <td>6311409.28</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>C1881841831</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>2704</th>\n",
        "      <td>1</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>4541.85</td>\n",
+       "      <td>C1110913929</td>\n",
+       "      <td>198.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>M162667475</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362617</th>\n",
-       "      <td>743</td>\n",
-       "      <td>CASH_OUT</td>\n",
-       "      <td>6311409.28</td>\n",
-       "      <td>C1162922333</td>\n",
-       "      <td>6311409.28</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>C1365125890</td>\n",
-       "      <td>68488.84</td>\n",
-       "      <td>6379898.11</td>\n",
+       "      <th>2705</th>\n",
        "      <td>1</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>525.89</td>\n",
+       "      <td>C174245837</td>\n",
+       "      <td>8496.61</td>\n",
+       "      <td>7970.72</td>\n",
+       "      <td>M124132186</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362618</th>\n",
-       "      <td>743</td>\n",
-       "      <td>TRANSFER</td>\n",
-       "      <td>850002.52</td>\n",
-       "      <td>C1685995037</td>\n",
-       "      <td>850002.52</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>C2080388513</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <th>2706</th>\n",
        "      <td>1</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>353.62</td>\n",
+       "      <td>C2083969860</td>\n",
+       "      <td>7970.72</td>\n",
+       "      <td>7617.10</td>\n",
+       "      <td>M1707293586</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6362619</th>\n",
-       "      <td>743</td>\n",
-       "      <td>CASH_OUT</td>\n",
-       "      <td>850002.52</td>\n",
-       "      <td>C1280323807</td>\n",
-       "      <td>850002.52</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>C873221189</td>\n",
-       "      <td>6510099.11</td>\n",
-       "      <td>7360101.63</td>\n",
+       "      <th>2707</th>\n",
        "      <td>1</td>\n",
+       "      <td>PAYMENT</td>\n",
+       "      <td>6257.76</td>\n",
+       "      <td>C2030294088</td>\n",
+       "      <td>22163.00</td>\n",
+       "      <td>15905.24</td>\n",
+       "      <td>M1309191417</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6362620 rows × 11 columns</p>\n",
+       "<p>2708 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         step      type      amount     nameOrig  oldbalanceOrg  \\\n",
-       "0           1   PAYMENT     9839.64  C1231006815      170136.00   \n",
-       "1           1   PAYMENT     1864.28  C1666544295       21249.00   \n",
-       "2           1  TRANSFER      181.00  C1305486145         181.00   \n",
-       "3           1  CASH_OUT      181.00   C840083671         181.00   \n",
-       "4           1   PAYMENT    11668.14  C2048537720       41554.00   \n",
-       "...       ...       ...         ...          ...            ...   \n",
-       "6362615   743  CASH_OUT   339682.13   C786484425      339682.13   \n",
-       "6362616   743  TRANSFER  6311409.28  C1529008245     6311409.28   \n",
-       "6362617   743  CASH_OUT  6311409.28  C1162922333     6311409.28   \n",
-       "6362618   743  TRANSFER   850002.52  C1685995037      850002.52   \n",
-       "6362619   743  CASH_OUT   850002.52  C1280323807      850002.52   \n",
+       "      step      type    amount     nameOrig  oldbalanceOrg  newbalanceOrig  \\\n",
+       "0        1   PAYMENT   9839.64  C1231006815      170136.00       160296.36   \n",
+       "1        1   PAYMENT   1864.28  C1666544295       21249.00        19384.72   \n",
+       "2        1  TRANSFER    181.00  C1305486145         181.00            0.00   \n",
+       "3        1  CASH_OUT    181.00   C840083671         181.00            0.00   \n",
+       "4        1   PAYMENT  11668.14  C2048537720       41554.00        29885.86   \n",
+       "...    ...       ...       ...          ...            ...             ...   \n",
+       "2703     1   CASH_IN  43478.09  C1156135967     7471989.62      7515467.71   \n",
+       "2704     1   PAYMENT   4541.85  C1110913929         198.00            0.00   \n",
+       "2705     1   PAYMENT    525.89   C174245837        8496.61         7970.72   \n",
+       "2706     1   PAYMENT    353.62  C2083969860        7970.72         7617.10   \n",
+       "2707     1   PAYMENT   6257.76  C2030294088       22163.00        15905.24   \n",
        "\n",
-       "         newbalanceOrig     nameDest  oldbalanceDest  newbalanceDest  isFraud  \\\n",
-       "0             160296.36  M1979787155            0.00            0.00        0   \n",
-       "1              19384.72  M2044282225            0.00            0.00        0   \n",
-       "2                  0.00   C553264065            0.00            0.00        1   \n",
-       "3                  0.00    C38997010        21182.00            0.00        1   \n",
-       "4              29885.86  M1230701703            0.00            0.00        0   \n",
-       "...                 ...          ...             ...             ...      ...   \n",
-       "6362615            0.00   C776919290            0.00       339682.13        1   \n",
-       "6362616            0.00  C1881841831            0.00            0.00        1   \n",
-       "6362617            0.00  C1365125890        68488.84      6379898.11        1   \n",
-       "6362618            0.00  C2080388513            0.00            0.00        1   \n",
-       "6362619            0.00   C873221189      6510099.11      7360101.63        1   \n",
+       "         nameDest  oldbalanceDest  newbalanceDest  isFraud  isFlaggedFraud  \n",
+       "0     M1979787155             0.0            0.00        0               0  \n",
+       "1     M2044282225             0.0            0.00        0               0  \n",
+       "2      C553264065             0.0            0.00        1               0  \n",
+       "3       C38997010         21182.0            0.00        1               0  \n",
+       "4     M1230701703             0.0            0.00        0               0  \n",
+       "...           ...             ...             ...      ...             ...  \n",
+       "2703  C2117043942        124103.0       173135.98        0               0  \n",
+       "2704   M162667475             0.0            0.00        0               0  \n",
+       "2705   M124132186             0.0            0.00        0               0  \n",
+       "2706  M1707293586             0.0            0.00        0               0  \n",
+       "2707  M1309191417             0.0            0.00        0               0  \n",
        "\n",
-       "         isFlaggedFraud  \n",
-       "0                     0  \n",
-       "1                     0  \n",
-       "2                     0  \n",
-       "3                     0  \n",
-       "4                     0  \n",
-       "...                 ...  \n",
-       "6362615               0  \n",
-       "6362616               0  \n",
-       "6362617               0  \n",
-       "6362618               0  \n",
-       "6362619               0  \n",
-       "\n",
-       "[6362620 rows x 11 columns]"
+       "[2708 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
